# Oh-Numpy

./: .gitignore  100 Numpy Exercises.ipynb  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflow/: docs.yml
100-Numpy-Exercises/: index.html
docs/: 100-Numpy-Exercises.ipynb
search/: search_index.json
